Added format conversion: multiplex to multinet full ml

--- a/data/euair-transport/euair.config
+++ b/data/euair-transport/euair.config
@@ -1,1 +1,1 @@
-EUAirTransportation_nodes.txt;EUAirTransportation_multiplex.edges;EUAirTransportation_layers.txt
+../data/euair-transport/EUAirTransportation_multilayer.edges;../data/euair-transport/EUAirTransportation_layers.txt;../data/euair-transport/EUAirTransportation_nodes.txt
