--- a/data/london-transport/london.config
+++ b/data/london-transport/london.config
@@ -1,1 +1,1 @@
-london_transport_nodes.txt;london_transport_multiplex.edges;london_transport_layers.txt
+../data/london-transport/london_transport_multilayer.edges;../data/london-transport/london_transport_layers.txt;../data/london-transport/london_transport_nodes.txt
